[package]
name = "autoshutdownapp-tauri"
version = "0.1.0"
description = "Auto Shutdown Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "autoshutdownapp_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility"
] }
image = "0.25"
base64 = "0.22"
